--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,8 @@
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 34px;
   color: #777;
-  
-  text-align: justify;
   background: url("../images/navy_blue.png");
 }
 
@@ -37,7 +35,7 @@ h2,
 h3 {
   font-family: Georgia, Times, "Times New Roman", serif;
   font-weight: 700;
-  color: #f38630;
+  color: #4aaaa5;
 }
 
 h1 {
@@ -54,7 +52,7 @@ h3 {
 
 /* header */
 
-#masthead {
+#header {
   position: fixed;
   z-index: 99;
   width: 100%;
@@ -65,10 +63,6 @@ h3 {
   border-bottom: 2px solid #ccc;
 }
 
-#profilepic {
-  float:left;
-  height:calc(100vh - 450px);
-}
 #logo {
   float: left;
   width: 250px;
@@ -77,7 +71,10 @@ h3 {
   font-size: 30px;
   font-weight: 700;
   line-height: 90px;
-  
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
 nav {
@@ -109,12 +106,11 @@ footer {
   color: #ccc;
   text-align: center;
   background: #666;
-  border-top: 8px solid #f38630;
+  border-top: 8px solid #4aaaa5;
   height: 50px;
 }
 
-h3,
-h2 {
+h3, h2 {
   padding-bottom: 20px;
   margin-bottom: 15px;
   line-height: 22px;
@@ -134,7 +130,7 @@ h2 {
   max-width: 960px;
   padding: 30px;
   margin: 0 0 40px;
-  background: #eee;
+  background: #fff;
   border: 1px solid #ddd;
 }
 
@@ -159,7 +155,7 @@ h2 {
 }
 
 .work h3 {
-  position: relative;
+  position: absolute;
   bottom: 20px;
   width: 100%;
   padding: 15px;
@@ -168,7 +164,7 @@ h2 {
   line-height: 30px;
   color: #fff;
   text-align: center;
-  background: #f38630;
+  background: #4aaaa5;
   border-bottom: 0;
 }
 
@@ -178,8 +174,6 @@ h2 {
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
-  opacity: 0.9;
-  border-radius:50%;
 }
 
 /* contact page */
@@ -218,14 +212,6 @@ input[type=submit] {
   font-size: 18px;
   color: #fff;
   cursor: pointer;
-  background: #f38630;
+  background: #4aaaa5;
   border: 0 none;
-}
-
-.instagram-media{
- 
-  float:right;
-  margin-right: 20px;
-  
-  
 }
