--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,8 +155,7 @@ h3, h2 {
 }
 
 .work h3 {
-  position: absolute;
-  bottom: 20px;
+  position: relative;
   width: 100%;
   padding: 15px;
   margin-bottom: 0;
@@ -168,13 +167,7 @@ h3, h2 {
   border-bottom: 0;
 }
 
-.auth-image {
-  float: left;
-  width: 200px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
-}
+
 
 /* contact page */
 
